--- a/pages/styles/utils.scss
+++ b/pages/styles/utils.scss
@@ -22,6 +22,7 @@ $grey:        #808085 !default;
 $grey-light:  #C8C7CC !default;
 $green:       #05C46B !default;
 $yellow:      #FFA800 !default;
+$yellow-l:    #F58400 !default;
 
 /*
  * Layout
