--- a/pages/styles/utils.scss
+++ b/pages/styles/utils.scss
@@ -3,6 +3,8 @@
  * ======================================================================== */
 
 $font-family-base: 'Noto Sans', sans-serif;
+$noto-sans: 'Noto Sans', sans-serif;
+$ibm-plex-sans: 'IBM Plex Sans', sans-serif;
 
 /*
  * Colors
