--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -8,6 +8,13 @@
 }
 
 .Card-image {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+
+  @include md {
+    max-height: 100%
+  }
 }
 
 .Card-info {
