--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -23,28 +23,48 @@
   display: flex;
   flex-direction: row;
   font-size: 14px;
-  margin: 0 -20px;
-
-  a {
-    text-decoration: none;
-  }
+  align-items: center;
 
   .nav-item {
-    height: 32px;
-    padding: 0 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    display: flex;
-    align-items: flex-end;
-    color: $grey;
+    margin-left: 18px;
+  }
 
-    &:hover {
-      color: $yellow;
-    }
+  .nav-item-subscribe {
+    color: white;
   }
 
   @include sm {
     display: none;
+  }
+}
+
+.navbar-dropdown {
+  display: none;
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
+  top: 0;
+  z-index: 1;
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0;
+  }
+
+  .nav-item {
+    margin-top: 18px;
+    border: none;
+    background: transparent;
+    font-size: 22px;
+    line-height: 29px;
+  }
+
+  .nav-item-subscribe {
+    color: $yellow-l;
   }
 }
 
@@ -62,33 +82,12 @@
   display: none;
 }
 
-.navbar-dropdown {
-  display: none;
-  position: absolute;
-  background: $dark;
-  width: 100%;
-  height: 100vh;
-  padding-top: 100px;
-  top: 0;
-  z-index: 1;
-
-  .nav {
-    display: block;
-    text-align: center;
-  }
-
-  .nav-item {
-    padding: 20px 0;
-    display: block;
-  }
-}
-
 .nav-logo {
   display: flex;
   justify-content: center;
   padding-top: 30%;
 
   path {
-    fill:$dark-steal;
+    fill: $dark-steal;
   }
 }
