Display the "table-of-contents" on markdown pages

--- a/pages/styles/index.scss
+++ b/pages/styles/index.scss
@@ -12,6 +12,7 @@
 @import "../../components/Contact/ContactForm";
 @import "../../components/Card/Card";
 @import "../../components/Guide/Guide";
+@import "../../components/Markdown/Markdown";
 
 body {
   font-family: $font-family-base;
