--- a/pages/styles/utils.scss
+++ b/pages/styles/utils.scss
@@ -31,6 +31,8 @@ $yellow-l:    #F58400 !default;
  * ======================================================================== */
 
 $max-content-width: 1000px;
+$header-height: 110px;
+$header-sm: 80px;
 
 /*
  * Media queries breakpoints
