--- a/pages/styles/index.scss
+++ b/pages/styles/index.scss
@@ -9,10 +9,11 @@
 @import "../../components/Banner/Banner";
 @import "../../components/Button/Button";
 @import "../../components/Footer/Footer";
-@import "../../components/Contact/ContactForm";
+@import "../../components/Contact/SubscribeForm";
 @import "../../components/Card/Card";
 @import "../../components/Guide/Guide";
 @import "../../components/Markdown/Markdown";
+@import "../../components/Modal/Modal";
 
 body {
   font-family: $font-family-base;
