--- a/components/Banner/BannerWallet.scss
+++ b/components/Banner/BannerWallet.scss
@@ -5,6 +5,10 @@
   padding-bottom: 58px;
 }
 
+.dark-mode .Banner-wrap-wallet {
+  background: $dark-soft;
+}
+
 .Banner-wallet {
   background: black;
   position: relative;
