--- a/components/Guide/GuideNext.scss
+++ b/components/Guide/GuideNext.scss
@@ -1,9 +1,5 @@
 @import "../../pages/styles/utils";
 
-.Guide-next-wrap {
-  background: $light;
-}
-
 .Guide-next {
   width: 100%;
   height: 420px;
@@ -11,7 +7,22 @@
 
 .Guide-next-title {
   padding-bottom: 14px;
-  color: $darkest;
   font-size: 24px;
   line-height: 33px;
+}
+
+.light-mode .Guide-next-wrap {
+  background: $light;
+}
+
+.dark-mode .Guide-next-wrap {
+  background: $dark-soft;
+}
+
+.light-mode .Guide-next-title {
+  color: $darkest;
+}
+
+.dark-mode .Guide-next-title {
+  color: $grey-light;
 }
