--- a/components/Markdown/Markdown.scss
+++ b/components/Markdown/Markdown.scss
@@ -20,7 +20,6 @@
 }
 
 .Markdown-content {
-  background: #FFFFFF;
   margin-right: 24px;
   font-size: 16px;
   line-height: 22px;
@@ -66,7 +65,6 @@
 }
 
 .Markdown-side-content {
-  background: #FFFFFF;
   border-radius: 16px;
   position: sticky;
   top: $header-height;
@@ -74,6 +72,16 @@
   @include sm {
     border-radius: 0;
   }
+}
+
+.light-mode .Markdown-content,
+.light-mode .Markdown-side-content {
+  background: $white;
+}
+
+.dark-mode .Markdown-content,
+.dark-mode .Markdown-side-content {
+  background: $dark;
 }
 
 .Markdown-side-fixed {
@@ -118,11 +126,17 @@
 }
 
 .Markdown-menu {
-  background: #F5F5F5;
-
   @include sm {
     display: none;
   }
+}
+
+.light-mode .Markdown-menu {
+  background: $light;
+}
+
+.dark-mode .Markdown-menu {
+  background: $dark-soft;
 }
 
 .Markdown-menu-head {
@@ -133,7 +147,6 @@
 
 .Markdown-menu-item {
   padding: 12px 32px;
-  border-bottom: 1px solid #DBDAE0;
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
@@ -141,6 +154,14 @@
   a.current {
     text-decoration: underline;
   }
+}
+
+.light-mode .Markdown-menu-item {
+  border-bottom: 1px solid #DBDAE0;
+}
+
+.dark-mode .Markdown-menu-item {
+  border-bottom: 1px solid #37393C;
 }
 
 .Markdown-menu-bordered {
