--- a/pages/styles/utils.scss
+++ b/pages/styles/utils.scss
@@ -19,6 +19,7 @@ $black-50:    rgba(0, 0, 0, 0.5) !default;
 $dark:        #13151A !default;
 $darkest:     #0f1014 !default;
 $dark-steal:  #252933 !default;
+$dark-soft:   #292B2D !default;
 $blue:        #0d6efd !default;
 $grey:        #808085 !default;
 $grey-light:  #C8C7CC !default;
