Rollback custom text color classes

--- a/website/components/Guide/Guide.scss
+++ b/website/components/Guide/Guide.scss
@@ -9,4 +9,16 @@
   padding-bottom: 61px;
 }
 
+.text-yellow {
+  color: $yellow-l;
+}
+
+.text-grey {
+  color: $grey;
+}
+
+.text-dark {
+  color: $darkest;
+}
+
 @import "GuideNext";
