--- a/website/components/Header/Header.scss
+++ b/website/components/Header/Header.scss
@@ -1,4 +1,5 @@
 @import "../../pages/styles/utils";
+@import "Dropdown";
 
 .Header {
   position: fixed;
@@ -59,6 +60,15 @@
 
   @include sm {
     display: none;
+  }
+}
+
+.nav-language {
+  position: relative;
+  padding: 14px 4px;
+
+  &:hover > .dropdown-menu {
+    display: block;
   }
 }
 
