--- a/website/components/Banner/BannerWallet.scss
+++ b/website/components/Banner/BannerWallet.scss
@@ -1,5 +1,9 @@
 @import "../../pages/styles/utils";
 
+.Container-banner-wallet {
+  padding-top: 58px;
+}
+
 .Banner-wrap-wallet {
   background: $light;
   padding-bottom: 58px;
