--- a/website/components/Guide/Guide.scss
+++ b/website/components/Guide/Guide.scss
@@ -1,12 +1,17 @@
 @import "../../pages/styles/utils";
 
+.Guides {
+  row-gap: 36px;
+  column-gap: 24px;
+}
+
 .Guides-filter {
   padding: 58px 0;
 }
 
 .Guides-pagination {
-  padding-top: 40px;
-  padding-bottom: 61px;
+  padding-top: 36px;
+  padding-bottom: 58px;
 }
 
 .text-yellow {
