--- a/website/components/Header/Header.scss
+++ b/website/components/Header/Header.scss
@@ -52,9 +52,18 @@
   .nav-item, .nav-icon {
     margin-left: 20px;
     cursor: pointer;
+
+    &:hover {
+      color: $yellow-l;
+
+      path {
+        fill: $yellow-l;
+      }
+    }
   }
 
   .nav-item-subscribe {
+    margin-left: 20px;
     color: white;
   }
 
@@ -65,10 +74,18 @@
 
 .nav-language {
   position: relative;
-  padding: 14px 4px;
+  padding: 14px 10px;
+  margin-left: 10px !important;
+  margin-right: -10px !important;
 
   &:hover > .dropdown-menu {
     display: block;
+  }
+
+  @include sm {
+    padding: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 }
 
@@ -81,25 +98,38 @@
   padding-top: 100px;
   top: 0;
   z-index: 1;
+  flex-direction: column;
+  justify-content: space-between;
 
   .nav {
     display: flex;
     flex-direction: column;
     text-align: center;
     margin: 0;
+    overflow: auto;
   }
 
   .nav-item, .nav-icon {
     border: none;
     background: transparent;
-    margin-left: 0;
-    margin-top: 40px;
+    margin: 20px 0;
     font-size: 22px;
     line-height: 29px;
   }
 
   .nav-item-subscribe {
+    font-size: 22px;
+    line-height: 29px;
+    margin-left: 0;
+    margin-top: 20px;
     color: $yellow-l;
+    background: transparent;
+  }
+
+  .dropdown-menu {
+    @include sm {
+      display: none !important;
+    }
   }
 }
 
@@ -124,7 +154,8 @@
 .nav-logo {
   display: flex;
   justify-content: center;
-  padding-top: 30%;
+  padding-top: 70px;
+  padding-bottom: 30%;
 }
 
 .light-mode .Button-nav {
