--- a/website/components/Banner/BannerGuide.scss
+++ b/website/components/Banner/BannerGuide.scss
@@ -2,24 +2,19 @@
   height: 344px;
   align-items: flex-start;
   background: #F0A63E;
+  border-radius: 16px 16px 0 0;
 
-  .Banner-title {
-    font-weight: 600;
-    font-size: 28px;
-    line-height: 38px;
+  .Banner-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
-    @include md {
-      font-size: 48px;
-      line-height: 65px;
+    @include sm {
+      object-fit: contain;
     }
   }
 
-  .Banner-description {
-    color: white;
-    padding-bottom: 10px;
-  }
-
-  .Banner-info {
-    padding: 24px !important;
+  @include sm {
+    border-radius: 0
   }
 }
