--- a/website/components/Markdown/Markdown.scss
+++ b/website/components/Markdown/Markdown.scss
@@ -5,18 +5,29 @@
   position: relative;
 
   @include sm {
-    flex-direction: column-reverse;
     padding: 0;
   }
 }
 
-.Markdown-section {
-  margin-top: 36px;
-  border-radius: 16px;
+.Progress-container {
+  height: 2px;
+  position: fixed;
+  left: 0;
+  width: 100vw;
+  z-index: 1;
+}
 
-  @include sm {
-    border-radius: 0;
-  }
+.light-mode .Progress-container {
+  background: #E1E1E5;
+}
+
+.dark-mode .Progress-container {
+  background: #37393B;
+}
+
+.Progress-bar {
+  height: 2px;
+  background: $yellow-l;
 }
 
 .Markdown-content {
@@ -27,12 +38,7 @@
 
   @include md {
     padding: 18px 88px; // 42px - 24px from paragraph
-    margin-top: 36px;
     margin-bottom: 58px;
-  }
-
-  @include sm {
-    margin-top: 0;
   }
 
   p, ul, ol, blockquote {
@@ -53,7 +59,15 @@
   margin-right: 24px;
 
   @include sm {
-    padding: 0 24px;
+    margin-top: 0
+  }
+}
+
+.Markdown-content {
+  border-radius: 0 0 16px 16px;
+
+  @include sm {
+    border-radius: 0
   }
 }
 
