--- a/website/components/Header/Dropdown.scss
+++ b/website/components/Header/Dropdown.scss
@@ -10,10 +10,8 @@
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #212529;
   text-align: center;
   list-style: none;
-  background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
   box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
@@ -22,6 +20,16 @@
   &:hover {
     display: block;
   }
+}
+
+.dark-mode .dropdown-menu {
+  background: $dark-soft;
+  color: $grey;
+}
+
+.light-mode .dropdown-menu {
+  background: #ffffff;
+  color: #212529;
 }
 
 .dropdown-menu-center {
@@ -34,17 +42,9 @@
   display: block;
   width: 100%;
   padding: 0.5rem 1rem;
-  clear: both;
   font-weight: 400;
-  color: #212529;
-  text-align: inherit;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: transparent;
-  border: 0;
-}
 
-.dropdown-item:hover, .dropdown-item:focus {
-  color: #16181b;
-  background-color: #f8f9fa;
+  &:hover {
+    color: $yellow-l;
+  }
 }
