--- a/website/components/Markdown/Markdown.scss
+++ b/website/components/Markdown/Markdown.scss
@@ -14,7 +14,7 @@
   position: fixed;
   left: 0;
   width: 100vw;
-  z-index: 1;
+  z-index: 2;
 }
 
 .light-mode .Progress-container {
@@ -31,55 +31,85 @@
 }
 
 .Markdown {
-  @include sm {
-    border-radius: 0
+  p, ul, ol, blockquote {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
-  p, ul, ol, blockquote {
-    @apply my-6;
+  ul, ol {
+    list-style: inherit;
+    padding-left: 1.1em;
+  }
+
+  h1 {
+    font-size: 32px;
+    line-height: 44px;
+    font-weight: 600;
   }
 
   h2 {
-    @apply text-3xl mt-12 mb-4 leading-snug;
+    font-size: 24px;
+    line-height: 33px;
+    font-weight: 500;
   }
 
   h3 {
-    @apply text-2xl mt-8 mb-4 leading-snug;
+    font-size: 20px;
+    line-height: 27px;
+  }
+
+  blockquote {
+    background: $light;
+    padding: 12px 12px 12px 16px;
+    position: relative;
+
+    &:before {
+      position: absolute;
+      top: 13px;
+      bottom: 13px;
+      margin-left: -16px;
+      width: 4px;
+      display: block;
+      content: "";
+      background: $grey;
+    }
+
+    @include md {
+      padding-left: 24px;
+
+      &:before {
+        margin-left: -24px;
+      }
+    }
+
+    > * {
+      margin: 0;
+    }
+  }
+}
+
+.dark-mode .Markdown {
+  blockquote {
+    background: $dark-soft;
   }
 }
 
 .Markdown-content {
   font-size: 16px;
   line-height: 22px;
-  margin-top: 36px;
+  margin-top: 0;
   margin-right: 24px;
-  padding-bottom: 12px;
-  border-radius: 16px;
+  padding: 0 24px 24px;
+  border-radius: 0;
   overflow: hidden;
 
-  > * {
-    padding: 0 24px;
-  }
-
-  > img {
-    padding: 0;
-    width: 100%;
-  }
-
   @include md {
-    padding-bottom: 18px;
+    padding: 36px 88px;
     margin-bottom: 58px;
-
-    > * {
-      padding: 0 88px;
-    }
-
-    img {
-      padding: 0;
-    }
+    margin-top: 36px;
+    border-radius: 16px;
   }
 }
-
 
 .Markdown-banner {
   margin-top: 36px;
@@ -108,6 +138,7 @@
   @include sm {
     box-shadow: none;
     border-radius: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -125,6 +156,7 @@
   position: sticky;
   width: 100%;
   top: 80px;
+  z-index: 1;
 }
 
 .Markdown-side-head {
