--- a/website/components/Guide/GuideNext.scss
+++ b/website/components/Guide/GuideNext.scss
@@ -1,5 +1,9 @@
 @import "../../pages/styles/utils";
 
+.Guide-next-card {
+  margin: 0 12px 58px;
+}
+
 .Guide-next {
   width: 100%;
   height: 420px;
