--- a/website/pages/styles/index.scss
+++ b/website/pages/styles/index.scss
@@ -2,6 +2,8 @@
 @import "~tailwindcss/components.css";
 @import "~tailwindcss/utilities";
 @import "~normalize.css";
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 @import "utils";
 
 @import "../../components/Container/Container";
@@ -14,6 +16,7 @@
 @import "../../components/Guide/Guide";
 @import "../../components/Markdown/Markdown";
 @import "../../components/Modal/Modal";
+@import "../../components/Slider/Slider";
 
 body {
   font-family: $font-family-base;
