--- a/website/components/Guide/Guide.scss
+++ b/website/components/Guide/Guide.scss
@@ -6,7 +6,6 @@
 }
 
 .Guides-filter {
-  width: 100vw;
   margin: 36px - 24px -5px;
   padding: 24px 5px;
   display: flex;
@@ -18,6 +17,11 @@
   @include md {
     top: $header-height - 1px;
     margin: 58px - 24px -5px;
+  }
+
+  @include sm {
+    margin: 0 -24px;
+    padding-left: 24px;
   }
 }
 
