Change the "related-guide's" background color

--- a/website/components/Contact/SubscribeForm.scss
+++ b/website/components/Contact/SubscribeForm.scss
@@ -93,7 +93,7 @@ input, textarea, .btn {
 }
 
 input, textarea {
-  border: 1px solid #37393B;
+  border: 1px solid $dark-light;
   padding: 15px 24px !important;
   background: black;
   width: 100%;
