--- a/website/components/Guide/GuideNext.scss
+++ b/website/components/Guide/GuideNext.scss
@@ -6,7 +6,6 @@
 
 .Guide-next {
   width: 100%;
-  height: 420px;
 }
 
 .Guide-next-title {
@@ -16,11 +15,11 @@
 }
 
 .light-mode .Guide-next-wrap {
-  background: $light;
+  background: $light-soft;
 }
 
 .dark-mode .Guide-next-wrap {
-  background: $dark-soft;
+  background: $dark-light;
 }
 
 .light-mode .Guide-next-title {
