--- a/website/pages/styles/utils.scss
+++ b/website/pages/styles/utils.scss
@@ -14,11 +14,13 @@ $white:       #ffffff !default;
 $white-50:    rgba(255, 255, 255, 0.5) !default;
 $light:       #F5F5F5 !default;
 $light-steal: #EBEBF0 !default;
+$light-soft:  #E1E1E5 !default;
 $black:       #000000 !default;
 $black-50:    rgba(0, 0, 0, 0.5) !default;
 $dark:        #13151A !default;
 $dark-steal:  #252933 !default;
 $dark-soft:   #292B2D !default;
+$dark-light:  #37393B !default;
 $darkest:     #0f1014 !default;
 $blue:        #0d6efd !default;
 $grey:        #808085 !default;
