Design a guides filters spacing

--- a/website/components/Card/Card.scss
+++ b/website/components/Card/Card.scss
@@ -14,12 +14,8 @@
 
 .Card-image {
   width: 100%;
-  max-height: 200px;
+  height: 200px;
   object-fit: cover;
-
-  @include md {
-    max-height: 100%
-  }
 }
 
 .Card-info {
