--- a/website/components/Header/Header.scss
+++ b/website/components/Header/Header.scss
@@ -119,7 +119,7 @@
     margin-left: 0;
     margin-top: 20px;
     color: $yellow-l;
-    background: transparent;
+    background: transparent !important;
   }
 
   .dropdown-menu {
