Update the main banner image and update modal screen bd in dark mode

--- a/website/components/Contact/SubscribeForm.scss
+++ b/website/components/Contact/SubscribeForm.scss
@@ -17,6 +17,15 @@
   }
 }
 
+.dark-mode .Modal-form,
+.dark-mode .Contact-success {
+  background: $dark;
+
+  input {
+    background: $dark;
+  }
+}
+
 .close-form {
   position: absolute;
   right: -3px;
