Set min height of first image of markdown document

--- a/website/components/Markdown/Markdown.scss
+++ b/website/components/Markdown/Markdown.scss
@@ -151,6 +151,14 @@
       margin: 0;
     }
   }
+
+  img:first-child {
+    min-height: 550px;
+
+    @include sm {
+      min-height: 230px;
+    }
+  }
 }
 
 .dark-mode .Markdown blockquote {
