--- a/website/components/Markdown/Markdown.scss
+++ b/website/components/Markdown/Markdown.scss
@@ -42,9 +42,14 @@
     margin-bottom: 24px;
   }
 
+  a {
+    color: $yellow-l;
+    text-decoration: underline;
+  }
+
   ul, ol {
     list-style: inherit;
-    padding-left: 1.1em;
+    padding-left: 1.5em;
   }
 
   .icon-link {
