--- a/website/pages/styles/index.scss
+++ b/website/pages/styles/index.scss
@@ -15,6 +15,7 @@
 @import "../../components/Card/Card";
 @import "../../components/Guide/Guide";
 @import "../../components/Markdown/Markdown";
+@import "../../components/Markdown/ShareModal";
 @import "../../components/Modal/Modal";
 @import "../../components/Slider/Slider";
 
