--- a/website/components/Markdown/Markdown.scss
+++ b/website/components/Markdown/Markdown.scss
@@ -66,7 +66,7 @@
     position: relative;
 
     @include md {
-      //scroll-margin-top: 120px;
+      scroll-margin-top: 120px;
     }
 
     a {
