Implement banner animation

--- a/website/pages/styles/index.scss
+++ b/website/pages/styles/index.scss
@@ -2,6 +2,7 @@
 @import "~tailwindcss/components.css";
 @import "~tailwindcss/utilities";
 @import "~normalize.css";
+@import "~animate.css/animate.css";
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 @import "utils";
