--- a/website/components/Banner/Banner.scss
+++ b/website/components/Banner/Banner.scss
@@ -2,6 +2,11 @@
 
 .Container-banner {
   padding-top: 36px !important;
+  padding-bottom: 32px;
+
+  @include sm {
+    padding-bottom: 15px;
+  }
 }
 
 .Banner-wrap {
@@ -44,6 +49,7 @@
   @include md {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 0 50px;
   }
 
@@ -84,6 +90,31 @@
   font-size: 16px;
   line-height: 22px;
   color: $grey;
+}
+
+.Banner-dots {
+  position: absolute;
+  bottom: -18px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.Banner-dot {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
+  padding: 6px;
+  cursor: pointer;
+}
+
+.Banner-dot-active circle {
+  fill: $yellow;
 }
 
 @import "BannerGuide";
