Add CookieConsent component

--- a/website/pages/styles/index.scss
+++ b/website/pages/styles/index.scss
@@ -19,6 +19,7 @@
 @import "../../components/Markdown/ShareModal";
 @import "../../components/Modal/Modal";
 @import "../../components/Slider/Slider";
+@import "../../components/CookieConsent/CookieConsent";
 
 body {
   font-family: $font-family-base;
